# minitorch-module-2-tristanrussell2000

./: .gitignore  pyproject.toml
minitorch/: autodiff.py  module.py  operators.py  scalar.py  scalar_functions.py  tensor_data.py  tensor_functions.py  tensor_ops.py
project/: run_scalar.py  run_tensor.py
tests/: test_tensor_data.py
