[project]
name = "minitorch-module-2-tristanrussell2000"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=5.0.0",
    "embeddings>=0.0.8",
    "hypothesis>=6.155.2",
    "mypy>=2.1.0",
    "networkx>=3.6.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pre-commit>=4.6.0",
    "pydot>=4.0.1",
    "pytest>=9.0.3",
    "pytest-env>=1.6.0",
    "pytest-runner>=6.0.1",
    "python-mnist>=0.7",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
    "torch>=2.12.0",
    "typing-extensions>=4.15.0",
    "watchdog>=6.0.0",
]
